git subrepo pull (merge) --remote=https://github.com/jupyter/qtconsole.git --branch=master --update --force external-deps/qtconsole
subrepo:
  subdir:   "external-deps/qtconsole"
  merged:   "96604f44c"
upstream:
  origin:   "https://github.com/jupyter/qtconsole.git"
  branch:   "master"
  commit:   "96604f44c"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/qtconsole/.github/workflows/linux-tests.yml
+++ b/external-deps/qtconsole/.github/workflows/linux-tests.yml
@@ -9,6 +9,10 @@ on:
     - master
   workflow_dispatch:
 
+concurrency:
+  group: linux-tests-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   linux:
     name: Linux Py${{ matrix.PYTHON_VERSION }} - ${{ matrix.INSTALL_TYPE }} - ${{ matrix.QT_LIB }}
@@ -35,7 +39,7 @@ jobs:
       - name: Install System Packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+          sudo apt-get install -y --no-install-recommends '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libegl1
       - name: Install Conda
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -68,7 +72,7 @@ jobs:
           pip list
       - name: Run tests
         shell: bash -l {0}
-        run: xvfb-run --auto-servernum pytest -x -vv -s --full-trace --color=yes --cov=qtconsole qtconsole
+        run: xvfb-run --auto-servernum pytest -vv -s --full-trace --color=yes --cov=qtconsole qtconsole
         env:
           QT_API: ${{ matrix.QT_LIB }}
           PYTEST_QT_API: ${{ matrix.QT_LIB }}
